# PySODMetrics

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  api.html  genindex.html  index.html  installation.html  metrics.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  readme_zh.md  requirements.txt  search.html  searchindex.js  setup.py  usage.html
.doctrees/: api.doctree  index.doctree  installation.doctree  metrics.doctree  usage.doctree
.github/workflows/: README.md  docs.yml  lint.yml  python-publish.yml
_modules/: index.html
_modules/py_sod_metrics/: context_measure.html  fmeasurev2.html  multiscale_iou.html  size_invariance.html  sod_metrics.html  utils.html
_sources/: api.rst.txt  installation.rst.txt  metrics.rst.txt  usage.rst.txt
deploy/: .gitignore  README.md  conf.py  index.rst
docs/: readme_zh.md
examples/: metric_recorder.py  test_bimetrics.py  test_metrics.py  version_performance.json
examples/test_data/: readme.md
py_sod_metrics/: __init__.py  context_measure.py  fmeasurev2.py  multiscale_iou.py  size_invariance.py  sod_metrics.py  utils.py
sod_metrics/: __init__.py
tests/: metric_recorder.py  test_metrics.py  test_speed_for_count_nonzero.py  test_speed_for_ops.py
tests/test_data/: readme.md
