[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["py_sod_metrics"] # 直接指定包名

[project]
name = "pysodmetrics"
version = "1.5.1"
dependencies = [
  "numpy>=1.18,<2.0",
  "scipy>=1.5,<2.0",
  "scikit-image>=0.19,<0.25",
  "opencv-python-headless>=4.7.0,<5.0.0",
]
requires-python = ">=3.6"
authors = [{ name = "lartpang", email = "lartpang@gmail.com" }]
maintainers = [{ name = "lartpang", email = "lartpang@gmail.com" }]
description = "A simple and efficient metric implementation for grayscale/binary image segmentation like salient object detection, camouflaged object detection, and medical image segmentation."
readme = "readme.md"
license = { file = "LICENSE" }
keywords = [
  "salient object detection",
  "camouflaged object detection",
  "medical image segmentation",
  "dichotomous image segmentation",
  "saliency detection",
  "metric",
  "deep learning",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/lartpang/PySODMetrics"
Documentation = "https://github.com/lartpang/PySODMetrics"
Repository = "https://github.com/lartpang/PySODMetrics.git"
"Bug Tracker" = "https://github.com/lartpang/PySODMetrics/issues"
Changelog = "https://github.com/lartpang/PySODMetrics/blob/master/CHANGELOG.md"

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options/
profile = "black"
multi_line_output = 3
filter_files = true
supported_extensions = "py"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.idea
  | \.vscode
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | output
)/
'''

[tool.ruff]
# Same as Black.
line-length = 119
indent-width = 4
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
